Add initial HTML configuration for TCN Pattern Service with responsive design and interactive features

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -1299,6 +1299,7 @@
                 <div class="service-links">
                     <a href="/service-tcn.html" target="_blank">Info</a>
                     <a href="/tcn/docs" target="_blank">API Docs</a>
+                    <a href="/config-tcn.html" target="_blank">Config</a>
                 </div>
             </div>
 
@@ -1322,6 +1323,7 @@
                 <div class="service-links">
                     <a href="/service-hmm.html" target="_blank">Info</a>
                     <a href="/hmm/docs" target="_blank">API Docs</a>
+                    <a href="/config-hmm.html" target="_blank">Config</a>
                 </div>
             </div>
 
@@ -1344,6 +1346,7 @@
                 <div class="service-links">
                     <a href="/service-embedder.html" target="_blank">Info</a>
                     <a href="/embedder/docs" target="_blank">API Docs</a>
+                    <a href="/config-embedder.html" target="_blank">Config</a>
                 </div>
             </div>
 
